Semi-rewrite the backend