@@ -1,102 +1,72 @@
 package net.modtale.service.project;
 
-import net.modtale.model.dto.project.ManifestDependencySuggestion;
+import net.modtale.exception.InvalidVersionRequestException;
+import net.modtale.exception.VersionNotFoundException;
 import net.modtale.model.dto.project.ManifestInspectionResult;
-import net.modtale.model.project.*;
+import net.modtale.model.project.Project;
+import net.modtale.model.project.ProjectStatus;
+import net.modtale.model.project.ProjectVersion;
 import net.modtale.model.user.User;
 import net.modtale.repository.project.ProjectRepository;
-import net.modtale.service.storage.StorageService;
-import net.modtale.service.security.FileValidationService;
-import net.modtale.service.security.FileValidationService.ManifestDependency;
-import net.modtale.service.security.FileValidationService.ManifestInspection;
-import net.modtale.service.security.SanitizationService;
-import net.modtale.service.security.AccessControlService;
-import net.modtale.service.security.ScanService;
-import net.modtale.service.security.SecurityIssueAnalysisService;
-import net.modtale.service.communication.NotificationService;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.Query;
-import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.InputStream;
-import java.security.MessageDigest;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Comparator;
 import java.util.List;
-import java.util.Locale;
 import java.util.Optional;
-import java.util.UUID;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 @Service
 public class VersionService {
 
-    @Autowired private ProjectRepository projectRepository;
-    @Autowired private ProjectService projectService;
-    @Autowired private LifecycleService lifecycleService;
-    @Autowired private ValidationService validationService;
-    @Autowired private ScanService scanService;
-    @Autowired private FileValidationService fileValidationService;
-    @Autowired private SanitizationService sanitizer;
-    @Autowired private StorageService storageService;
-    @Autowired private MongoTemplate mongoTemplate;
-    @Autowired private NotificationService notificationService;
-    @Autowired private AccessControlService accessControlService;
-    @Autowired private SecurityIssueAnalysisService securityIssueAnalysisService;
+    private final ProjectRepository projectRepository;
+    private final ProjectService projectService;
+    private final ProjectAccessService projectAccessService;
+    private final ProjectMutationGuard projectMutationGuard;
+    private final ProjectVersionAccessService projectVersionAccessService;
+    private final MongoTemplate mongoTemplate;
+    private final VersionManifestService versionManifestService;
+    private final ProjectDeletionService projectDeletionService;
+    private final VersionCreationCommandHandler versionCreationCommandHandler;
+    private final VersionUpdateCommandHandler versionUpdateCommandHandler;
 
-    @Value("${app.limits.max-versions-per-day:5}") private int maxVersionsPerDay;
-    @Value("${app.limits.max-versions-per-month:30}") private int maxVersionsPerMonth;
-
-    private static final List<ProjectClassification> MUTABLE_CLASSIFICATIONS = List.of(
-            ProjectClassification.PLUGIN,
-            ProjectClassification.DATA,
-            ProjectClassification.ART
-    );
-    private static final Pattern SEMVER_TOKEN_PATTERN = Pattern.compile("(0|[1-9]\\d*)\\.(0|[1-9]\\d*)\\.(0|[1-9]\\d*)(?:-([0-9A-Za-z.-]+))?(?:\\+[0-9A-Za-z.-]+)?");
-    private static final Pattern RANGE_PART_PATTERN = Pattern.compile("(\\^|>=|<=|>|<|=)?\\s*((?:0|[1-9]\\d*)\\.(?:0|[1-9]\\d*)\\.(?:0|[1-9]\\d*)(?:-[0-9A-Za-z.-]+)?(?:\\+[0-9A-Za-z.-]+)?)");
+    public VersionService(
+            ProjectRepository projectRepository,
+            ProjectService projectService,
+            ProjectAccessService projectAccessService,
+            ProjectMutationGuard projectMutationGuard,
+            ProjectVersionAccessService projectVersionAccessService,
+            MongoTemplate mongoTemplate,
+            VersionManifestService versionManifestService,
+            ProjectDeletionService projectDeletionService,
+            VersionCreationCommandHandler versionCreationCommandHandler,
+            VersionUpdateCommandHandler versionUpdateCommandHandler
+    ) {
+        this.projectRepository = projectRepository;
+        this.projectService = projectService;
+        this.projectAccessService = projectAccessService;
+        this.projectMutationGuard = projectMutationGuard;
+        this.projectVersionAccessService = projectVersionAccessService;
+        this.mongoTemplate = mongoTemplate;
+        this.versionManifestService = versionManifestService;
+        this.projectDeletionService = projectDeletionService;
+        this.versionCreationCommandHandler = versionCreationCommandHandler;
+        this.versionUpdateCommandHandler = versionUpdateCommandHandler;
+    }
 
     public ProjectVersion findVersion(Project pack, String versionNumber) {
-        if ("latest".equalsIgnoreCase(versionNumber)) return pack.getVersions().isEmpty() ? null : pack.getVersions().get(0);
-        return pack.getVersions().stream().filter(v -> v.getVersionNumber().equalsIgnoreCase(versionNumber)).findFirst().orElse(null);
+        if ("latest".equalsIgnoreCase(versionNumber)) {
+            return pack.getVersions().isEmpty() ? null : pack.getVersions().getFirst();
+        }
+        return pack.getVersions().stream()
+                .filter(version -> version.getVersionNumber().equalsIgnoreCase(versionNumber))
+                .findFirst()
+                .orElse(null);
     }
 
     public ProjectVersion findVersion(Project project, String versionNumber, String gameVersion) {
-        if (project == null || project.getVersions() == null || project.getVersions().isEmpty()) return null;
-        if ("latest".equalsIgnoreCase(versionNumber)) return project.getVersions().get(0);
-        List<ProjectVersion> matches = project.getVersions().stream()
-                .filter(v -> v.getVersionNumber() != null && v.getVersionNumber().equalsIgnoreCase(versionNumber))
-                .toList();
-        if (matches.isEmpty()) return null;
-        if (gameVersion != null && !gameVersion.isBlank()) {
-            return matches.stream()
-                    .filter(v -> v.getGameVersions() != null && v.getGameVersions().stream().anyMatch(gv -> gameVersion.equalsIgnoreCase(gv)))
-                    .findFirst()
-                    .orElse(null);
-        }
-        return selectForLatestGameVersion(matches);
-    }
-
-    private ProjectVersion selectForLatestGameVersion(List<ProjectVersion> versions) {
-        List<String> allowed = validationService.getAllowedGameVersions();
-        if (allowed != null && !allowed.isEmpty()) {
-            for (String gv : allowed) {
-                Optional<ProjectVersion> match = versions.stream()
-                        .filter(v -> v.getGameVersions() != null && v.getGameVersions().stream().anyMatch(existing -> gv.equalsIgnoreCase(existing)))
-                        .findFirst();
-                if (match.isPresent()) return match.get();
-            }
-        }
-        return versions.stream()
-                .max(Comparator.comparing(ProjectVersion::getReleaseDate, Comparator.nullsLast(String::compareTo)))
-                .orElse(versions.get(0));
+        return projectVersionAccessService.findByVersionNumber(project, versionNumber, gameVersion);
     }
 
     public Optional<ProjectVersion> getVersionByHash(String hash) {
@@ -107,487 +77,42 @@ public class VersionService {
     }
 
     public void updateVersion(String id, String versionId, List<String> projectIds, List<String> gameVersions, String changelog, ProjectVersion.Channel channel, User user) {
-        Project project = projectService.getRawProjectById(id);
-        if (project == null || !accessControlService.hasProjectPermission(project, user, "VERSION_EDIT")) throw new SecurityException("Denied");
-        lifecycleService.ensureEditable(project);
-
-        ProjectVersion version = project.getVersions().stream().filter(v -> v.getId().equals(versionId)).findFirst().orElseThrow(() -> new IllegalArgumentException("Not found"));
-        if (gameVersions != null) {
-            List<String> allowed = validationService.getAllowedGameVersions();
-            for (String gv : gameVersions) {
-                if (!allowed.contains(gv)) throw new IllegalArgumentException("Invalid game version: " + gv);
-            }
-            version.setGameVersions(gameVersions);
-        }
-        if (changelog != null) version.setChangelog(sanitizer.sanitizePlainText(changelog));
-        if (channel != null) version.setChannel(channel);
-
-        boolean isModpack = project.getClassification() == ProjectClassification.MODPACK;
-        if (projectIds != null) {
-            List<ProjectDependency> newDeps = new ArrayList<>();
-            List<String> simpleIds = new ArrayList<>();
-            for (String entry : projectIds) {
-                String[] parts = entry.split(":");
-                if (parts.length < 2) throw new IllegalArgumentException("Invalid format.");
-                Project depProj = projectService.getRawProjectById(parts[0].trim());
-                if (depProj == null || depProj.getVersions().stream().noneMatch(v -> v.getVersionNumber().equalsIgnoreCase(parts[1].trim()))) throw new IllegalArgumentException("Dep missing.");
-                boolean optional = !isModpack && hasDependencyFlag(parts, "optional");
-                boolean embedded = hasDependencyFlag(parts, "embedded");
-                newDeps.add(new ProjectDependency(depProj.getId(), depProj.getTitle(), parts[1].trim(), optional, embedded));
-                simpleIds.add(depProj.getId());
-            }
-            if (isModpack && newDeps.size() < 2) throw new IllegalArgumentException("Min 2 deps.");
-            if (isModpack && !newDeps.equals(version.getDependencies()) && version.getFileUrl() != null && version.getFileUrl().endsWith(".zip")) {
-                try { storageService.deleteFile(version.getFileUrl()); } catch (Exception ignore) {}
-                version.setFileUrl(null);
-            }
-            version.setDependencies(newDeps);
-            if (isModpack && project.getVersions().get(0).getId().equals(versionId)) project.setModIds(simpleIds);
-        }
-        projectRepository.save(project);
-        projectService.evictProjectCache(project);
+        versionUpdateCommandHandler.updateVersion(id, versionId, projectIds, gameVersions, changelog, channel, user);
     }
 
-    public void addVersion(String id, String versionNumber, List<String> gameVersions, MultipartFile file, String changelog, List<String> projectIds, ProjectVersion.Channel channel, User user) throws Exception {
-        Project project = projectService.getRawProjectById(id);
-        if (project == null || !accessControlService.hasProjectPermission(project, user, "VERSION_CREATE")) throw new SecurityException("Denied");
-        lifecycleService.ensureEditable(project);
-
-        if (project.getStatus() == ProjectStatus.DRAFT && !project.getVersions().isEmpty()) throw new IllegalArgumentException("Drafts max 1 version.");
-
-        LocalDate now = LocalDate.now();
-        if (project.getVersions().stream().filter(v -> v.getReleaseDate().startsWith(now.toString())).count() >= maxVersionsPerDay) throw new IllegalStateException("Daily limit.");
-
-        validationService.validateVersionNumber(versionNumber);
-        boolean duplicateVersionWithOverlap = project.getVersions().stream().anyMatch(v ->
-                v.getVersionNumber() != null
-                        && v.getVersionNumber().equalsIgnoreCase(versionNumber)
-                        && gameVersionsOverlap(v.getGameVersions(), gameVersions)
-        );
-        if (duplicateVersionWithOverlap) throw new IllegalArgumentException("Exists for the same game/API target.");
-
-        if (gameVersions != null) {
-            List<String> allowed = validationService.getAllowedGameVersions();
-            for (String gv : gameVersions) {
-                if (!allowed.contains(gv)) throw new IllegalArgumentException("Invalid game version: " + gv);
-            }
-        }
-
-        ProjectClassification effectiveClassification = resolveClassificationForUpload(project, file);
-        boolean isModpack = effectiveClassification == ProjectClassification.MODPACK;
-        storageService.validateUploadSize(file);
-        if (!isModpack) fileValidationService.validateProjectFile(file, effectiveClassification.name());
-
-        String filePath = null;
-        String fileHash = null;
-
-        if (file != null) {
-            if (!isModpack) {
-                MessageDigest md = MessageDigest.getInstance("SHA-256");
-                try (InputStream is = file.getInputStream()) {
-                    byte[] buffer = new byte[8192]; int read;
-                    while ((read = is.read(buffer)) > 0) md.update(buffer, 0, read);
-                }
-                StringBuilder hex = new StringBuilder();
-                for (byte b : md.digest()) hex.append(String.format("%02x", b));
-                fileHash = hex.toString();
-                Query duplicateQuery = new Query(Criteria.where("versions.hash").is(fileHash).and("deletedAt").is(null));
-                if (mongoTemplate.exists(duplicateQuery, Project.class)) {
-                    throw new IllegalArgumentException("This file has already been uploaded to Modtale.");
-                }
-            }
-            filePath = storageService.upload(file, "files/" + effectiveClassification.name().toLowerCase());
-        }
-
-        ProjectVersion ver = new ProjectVersion();
-        ver.setId(UUID.randomUUID().toString());
-        ver.setVersionNumber(versionNumber);
-        ver.setGameVersions(gameVersions);
-        ver.setFileUrl(filePath);
-        ver.setReleaseDate(LocalDateTime.now().toString());
-        ver.setDownloadCount(0);
-        ver.setChangelog(sanitizer.sanitizePlainText(changelog));
-        ver.setChannel(channel);
-        ver.setHash(fileHash);
-        ver.setReviewStatus(ProjectVersion.ReviewStatus.PENDING);
-        ver.setDependencies(new ArrayList<>());
-
-        List<String> simpleIds = new ArrayList<>();
-        if (projectIds != null) {
-            for (String entry : projectIds) {
-                String[] parts = entry.split(":");
-                if (parts.length < 2) throw new IllegalArgumentException("Invalid format.");
-                Project depProj = projectService.getRawProjectById(parts[0].trim());
-                if (depProj == null || depProj.getStatus() == ProjectStatus.DRAFT) throw new IllegalArgumentException("Dep missing.");
-                boolean optional = !isModpack && hasDependencyFlag(parts, "optional");
-                boolean embedded = hasDependencyFlag(parts, "embedded");
-                ver.getDependencies().add(new ProjectDependency(depProj.getId(), depProj.getTitle(), parts[1].trim(), optional, embedded));
-                simpleIds.add(depProj.getId());
-            }
-        }
-        if (isModpack) {
-            if (ver.getDependencies().size() < 2) throw new IllegalArgumentException("Min 2 deps.");
-            project.setModIds(simpleIds);
-        }
-        if (file != null && !isModpack) {
-            ver.setScanResult(scanService.createQueuedScanResult(1, "Initial scan queued."));
-        }
-
-        project.getVersions().add(0, ver);
-        projectRepository.save(project);
-        projectService.evictProjectCache(project);
-
-        if (file != null && !isModpack) {
-            scanService.enqueueBackgroundScan(project.getId(), ver.getId(), filePath, file.getOriginalFilename(), false, 1);
-        }
-    }
-
-    private boolean gameVersionsOverlap(List<String> existingGameVersions, List<String> requestedGameVersions) {
-        if (existingGameVersions == null || existingGameVersions.isEmpty() || requestedGameVersions == null || requestedGameVersions.isEmpty()) {
-            return true;
-        }
-        for (String existing : existingGameVersions) {
-            for (String requested : requestedGameVersions) {
-                if (existing != null && requested != null && existing.equalsIgnoreCase(requested)) {
-                    return true;
-                }
-            }
-        }
-        return false;
-    }
-
-    private boolean hasDependencyFlag(String[] parts, String flag) {
-        for (int i = 2; i < parts.length; i++) {
-            if (flag.equalsIgnoreCase(parts[i].trim())) return true;
-        }
-        return false;
-    }
-
-    private ProjectClassification resolveClassificationForUpload(Project project, MultipartFile file) {
-        ProjectClassification current = project.getClassification();
-        if (current == null || file == null || file.isEmpty()) return current;
-        if (current == ProjectClassification.MODPACK || current == ProjectClassification.SAVE) return current;
-        if (!MUTABLE_CLASSIFICATIONS.contains(current)) return current;
-
-        String name = file.getOriginalFilename();
-        if (name == null) return current;
-        String lowerName = name.toLowerCase();
-
-        ProjectClassification next = current;
-        if (lowerName.endsWith(".jar")) next = ProjectClassification.PLUGIN;
-        else if (lowerName.endsWith(".zip") && current == ProjectClassification.PLUGIN) next = ProjectClassification.DATA;
-
-        if (next != current) {
-            project.setClassification(next);
-        }
-        return next;
+    public void addVersion(
+            String id,
+            String versionNumber,
+            List<String> gameVersions,
+            MultipartFile file,
+            String changelog,
+            List<String> projectIds,
+            ProjectVersion.Channel channel,
+            User user
+    ) {
+        versionCreationCommandHandler.addVersion(id, versionNumber, gameVersions, file, changelog, projectIds, channel, user);
     }
 
     public ManifestInspectionResult inspectManifest(String id, MultipartFile file, User user) {
-        Project project = projectService.getRawProjectById(id);
-        if (project == null || !accessControlService.hasProjectPermission(project, user, "VERSION_CREATE")) throw new SecurityException("Denied");
-        if (project.getClassification() != ProjectClassification.PLUGIN) return new ManifestInspectionResult(null, null, List.of());
-        storageService.validateUploadSize(file);
-
-        ManifestInspection manifest = fileValidationService.validateProjectFile(file, project.getClassification().name());
-        if (manifest == null) return new ManifestInspectionResult(null, null, List.of());
-
-        Query query = new Query(Criteria.where("status").in(ProjectStatus.PUBLISHED, ProjectStatus.ARCHIVED)
-                .and("deletedAt").is(null)
-                .and("_id").ne(project.getId())
-                .and("classification").is(ProjectClassification.PLUGIN));
-        query.fields().include("title").include("slug").include("versions");
-        List<Project> candidates = mongoTemplate.find(query, Project.class);
-
-        List<ManifestDependencySuggestion> suggestions = new ArrayList<>();
-        for (ManifestDependency dependency : manifest.getDependencies()) {
-            Project bestProject = null;
-            int bestScore = 0;
-
-            for (Project candidate : candidates) {
-                int score = scoreDependencyMatch(dependency, candidate);
-                if (score > bestScore) {
-                    bestScore = score;
-                    bestProject = candidate;
-                }
-            }
-
-            if (bestProject != null && bestScore >= 80) {
-                ProjectVersion version = selectSuggestedVersion(bestProject, dependency.getVersion());
-                if (version != null) {
-                    suggestions.add(new ManifestDependencySuggestion(
-                            dependency.getKey(),
-                            dependency.getVersion(),
-                            bestProject.getId(),
-                            bestProject.getTitle(),
-                            version.getVersionNumber(),
-                            dependency.isOptional(),
-                            bestScore
-                    ));
-                }
-            }
-        }
-
-        return new ManifestInspectionResult(
-                resolveManifestGameVersion(manifest.getServerVersion()),
-                manifest.getVersion(),
-                suggestions
-        );
-    }
-
-    private String resolveManifestGameVersion(String serverVersionRaw) {
-        if (serverVersionRaw == null || serverVersionRaw.isBlank()) return null;
-
-        List<String> allowed = validationService.getAllowedGameVersions();
-        if (allowed == null || allowed.isEmpty()) return null;
-
-        String raw = serverVersionRaw.trim();
-        if (allowed.contains(raw)) return raw;
-
-        List<RangeConstraint> constraints = parseRangeConstraints(raw);
-        if (constraints.isEmpty()) return null;
-
-        String best = null;
-        SemVer bestParsed = null;
-        for (String candidate : allowed) {
-            SemVer parsed = SemVer.parse(candidate);
-            if (parsed == null) continue;
-
-            boolean matchesAll = true;
-            for (RangeConstraint constraint : constraints) {
-                if (!constraint.matches(parsed)) {
-                    matchesAll = false;
-                    break;
-                }
-            }
-            if (!matchesAll) continue;
-            if (best == null) {
-                best = candidate;
-                bestParsed = parsed;
-                continue;
-            }
-
-            boolean preferSmaller = constraints.stream().noneMatch(RangeConstraint::hasUpperBound);
-            int bestCmp = parsed.compareTo(bestParsed);
-            if ((preferSmaller && bestCmp < 0) || (!preferSmaller && bestCmp > 0)) {
-                best = candidate;
-                bestParsed = parsed;
-            }
-        }
-
-        if (best != null) return best;
-
-        String targetPrefix = constraints.get(0).target.toString().toLowerCase(Locale.ROOT);
-        return allowed.stream()
-                .filter(v -> v != null && v.toLowerCase(Locale.ROOT).startsWith(targetPrefix))
-                .findFirst()
-                .orElse(null);
-    }
-
-    private List<RangeConstraint> parseRangeConstraints(String raw) {
-        List<RangeConstraint> constraints = new ArrayList<>();
-        Matcher matcher = RANGE_PART_PATTERN.matcher(raw);
-        while (matcher.find()) {
-            String op = matcher.group(1);
-            String token = matcher.group(2);
-            SemVer target = SemVer.parse(token);
-            if (target == null) continue;
-            constraints.add(new RangeConstraint(op == null ? "=" : op.trim(), target));
-        }
-        return constraints;
-    }
-
-    private static final class RangeConstraint {
-        private final String operator;
-        private final SemVer target;
-        private final SemVer caretUpperBound;
-
-        private RangeConstraint(String operator, SemVer target) {
-            this.operator = operator == null || operator.isBlank() ? "=" : operator;
-            this.target = target;
-            this.caretUpperBound = "^".equals(this.operator) ? target.caretUpperBound() : null;
-        }
-
-        boolean hasUpperBound() {
-            return "<".equals(operator) || "<=".equals(operator) || "^".equals(operator);
-        }
-
-        boolean matches(SemVer candidate) {
-            int cmp = candidate.compareTo(target);
-            return switch (operator) {
-                case ">" -> cmp > 0;
-                case ">=" -> cmp >= 0;
-                case "<" -> cmp < 0;
-                case "<=" -> cmp <= 0;
-                case "^" -> cmp >= 0 && candidate.compareTo(caretUpperBound) < 0;
-                case "=" -> cmp == 0;
-                default -> cmp == 0;
-            };
-        }
-    }
-
-    private static final class SemVer implements Comparable<SemVer> {
-        private final int major;
-        private final int minor;
-        private final int patch;
-        private final String preRelease;
-
-        private SemVer(int major, int minor, int patch, String preRelease) {
-            this.major = major;
-            this.minor = minor;
-            this.patch = patch;
-            this.preRelease = preRelease;
-        }
-
-        static SemVer parse(String value) {
-            if (value == null) return null;
-            Matcher matcher = SEMVER_TOKEN_PATTERN.matcher(value.trim());
-            if (!matcher.matches()) return null;
-            try {
-                int major = Integer.parseInt(matcher.group(1));
-                int minor = Integer.parseInt(matcher.group(2));
-                int patch = Integer.parseInt(matcher.group(3));
-                return new SemVer(major, minor, patch, matcher.group(4));
-            } catch (NumberFormatException ex) {
-                return null;
-            }
-        }
-
-        @Override
-        public int compareTo(SemVer other) {
-            int majorCmp = Integer.compare(this.major, other.major);
-            if (majorCmp != 0) return majorCmp;
-            int minorCmp = Integer.compare(this.minor, other.minor);
-            if (minorCmp != 0) return minorCmp;
-            int patchCmp = Integer.compare(this.patch, other.patch);
-            if (patchCmp != 0) return patchCmp;
-
-            if (this.preRelease == null && other.preRelease == null) return 0;
-            if (this.preRelease == null) return 1;
-            if (other.preRelease == null) return -1;
-            return this.preRelease.compareTo(other.preRelease);
-        }
-
-        SemVer caretUpperBound() {
-            if (major > 0) return new SemVer(major + 1, 0, 0, null);
-            if (minor > 0) return new SemVer(0, minor + 1, 0, null);
-            return new SemVer(0, 0, patch + 1, null);
-        }
-
-        @Override
-        public String toString() {
-            return major + "." + minor + "." + patch + (preRelease != null ? "-" + preRelease : "");
-        }
-    }
-
-    private int scoreDependencyMatch(ManifestDependency dependency, Project candidate) {
-        String depName = normalizeDependencyName(dependency.getNamePart());
-        String depKey = normalizeDependencyName(dependency.getKey());
-        String title = normalizeDependencyName(candidate.getTitle());
-        String slug = normalizeDependencyName(candidate.getSlug());
-
-        if (depName.isEmpty()) return 0;
-
-        if (!title.isEmpty() && depName.equals(title)) return 100;
-        if (!slug.isEmpty() && depName.equals(slug)) return 95;
-        if (!depKey.isEmpty() && ((!title.isEmpty() && depKey.equals(title)) || (!slug.isEmpty() && depKey.equals(slug)))) return 90;
-        if (isStrongContainedMatch(depName, title)) return 85;
-        if (isStrongContainedMatch(depName, slug)) return 82;
-        if (isStrongFuzzyMatch(depName, title)) return 80;
-        if (isStrongFuzzyMatch(depName, slug)) return 80;
-        return 0;
-    }
-
-    private boolean isStrongContainedMatch(String dependencyName, String candidateName) {
-        if (dependencyName.isEmpty() || candidateName.isEmpty()) return false;
-        int shorter = Math.min(dependencyName.length(), candidateName.length());
-        int longer = Math.max(dependencyName.length(), candidateName.length());
-        if (shorter < 6) return false;
-        if ((double) shorter / longer < 0.75) return false;
-        return candidateName.contains(dependencyName) || dependencyName.contains(candidateName);
-    }
-
-    private boolean isStrongFuzzyMatch(String dependencyName, String candidateName) {
-        if (dependencyName.isEmpty() || candidateName.isEmpty()) return false;
-        int longer = Math.max(dependencyName.length(), candidateName.length());
-        if (longer < 6) return false;
-        int distance = levenshtein(dependencyName, candidateName);
-        return distance <= 2 && ((double) distance / longer) <= 0.2;
-    }
-
-    private ProjectVersion selectSuggestedVersion(Project project, String requestedVersion) {
-        if (project.getVersions() == null || project.getVersions().isEmpty()) return null;
-        String exactVersion = requestedVersion == null ? "" : requestedVersion.replace(">=", "").replace("<=", "").replace(">", "").replace("<", "").replace("=", "").trim();
-        if (!exactVersion.isEmpty() && !"*".equals(exactVersion)) {
-            Optional<ProjectVersion> exact = project.getVersions().stream()
-                    .filter(v -> v.getVersionNumber() != null && v.getVersionNumber().equalsIgnoreCase(exactVersion))
-                    .findFirst();
-            if (exact.isPresent()) return exact.get();
-        }
-        return project.getVersions().stream()
-                .max(Comparator.comparing(ProjectVersion::getReleaseDate, Comparator.nullsLast(String::compareTo)))
-                .orElse(project.getVersions().get(0));
-    }
-
-    private String normalizeDependencyName(String value) {
-        if (value == null) return "";
-        return value.toLowerCase().replaceAll("[^a-z0-9]", "");
-    }
-
-    private int levenshtein(String a, String b) {
-        if (a == null || b == null || a.isEmpty() || b.isEmpty()) return Integer.MAX_VALUE;
-        int[] prev = new int[b.length() + 1];
-        int[] curr = new int[b.length() + 1];
-        for (int j = 0; j <= b.length(); j++) prev[j] = j;
-        for (int i = 1; i <= a.length(); i++) {
-            curr[0] = i;
-            for (int j = 1; j <= b.length(); j++) {
-                int cost = a.charAt(i - 1) == b.charAt(j - 1) ? 0 : 1;
-                curr[j] = Math.min(Math.min(curr[j - 1] + 1, prev[j] + 1), prev[j - 1] + cost);
-            }
-            int[] tmp = prev;
-            prev = curr;
-            curr = tmp;
-        }
-        return prev[b.length()];
+        Project project = projectAccessService.requireVersionPermission(id, user, "VERSION_CREATE",
+                "You do not have permission to inspect versions for this project.");
+        return versionManifestService.inspectManifest(project, file);
     }
 
     public void deleteVersion(String id, String versionId, User user) {
-        Project project = projectService.getRawProjectById(id);
-        if (project == null || !accessControlService.hasProjectPermission(project, user, "VERSION_DELETE")) throw new SecurityException("Denied.");
-        lifecycleService.ensureEditable(project);
-        if (project.getStatus() != ProjectStatus.DRAFT && project.getVersions().size() <= 1) throw new IllegalArgumentException("Cannot delete only version.");
-
-        if (project.getVersions().removeIf(v -> {
-            if (v.getId().equals(versionId)) { if (v.getFileUrl() != null) storageService.deleteFile(v.getFileUrl()); return true; }
-            return false;
-        })) {
-            projectRepository.save(project);
-            projectService.evictProjectCache(project);
-        } else throw new IllegalArgumentException("Not found.");
-    }
-
-    @Scheduled(fixedDelayString = "${app.scheduler.release-check:900000}")
-    public void processScheduledReleases() {
-        List<Project> projects = mongoTemplate.find(new Query(Criteria.where("versions").elemMatch(Criteria.where("reviewStatus").is("SCHEDULED").and("scheduledPublishDate").lte(LocalDateTime.now().toString()))), Project.class);
-        for (Project project : projects) {
-            boolean updated = false;
-            List<String> released = new ArrayList<>();
-            for (ProjectVersion v : project.getVersions()) {
-                if (v.getReviewStatus() == ProjectVersion.ReviewStatus.SCHEDULED && v.getScheduledPublishDate() != null && LocalDateTime.parse(v.getScheduledPublishDate()).isBefore(LocalDateTime.now())) {
-                    v.setReviewStatus(ProjectVersion.ReviewStatus.APPROVED);
-                    v.setScheduledPublishDate(null);
-                    securityIssueAnalysisService.markIssuesAcceptedForApprovedVersion(v);
-                    released.add(v.getVersionNumber());
-                    updated = true;
-                }
-            }
-            if (updated) {
-                project.setUpdatedAt(LocalDateTime.now().toString());
-                projectRepository.save(project);
-                projectService.evictProjectCache(project);
-                released.forEach(r -> { notificationService.notifyUpdates(project, r); notificationService.notifyDependents(project, r); });
-            }
+        Project project = projectAccessService.requireVersionPermission(id, user, "VERSION_DELETE",
+                "You do not have permission to delete this version.");
+        projectMutationGuard.ensureEditable(project);
+        if (project.getStatus() != ProjectStatus.DRAFT && project.getVersions().size() <= 1) {
+            throw new InvalidVersionRequestException("Published projects must keep at least one version.");
         }
+
+        ProjectVersion version = projectVersionAccessService.requireById(project, versionId,
+                () -> new VersionNotFoundException("We couldn't find that project version."));
+        projectDeletionService.deleteVersionFile(version);
+        project.getVersions().removeIf(existing -> existing.getId().equals(versionId));
+        projectRepository.save(project);
+        projectService.evictProjectCache(project);
     }
+
 }
